infrastructure/auth/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/exclude: 'true'
spec:
  tls:
    - hosts:
        - bo0tzz.me
      secretName: authentik-outpost-web-tls
  rules:
    - host: bo0tzz.me
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik
                port:
                  name: http
    - host: "*.bo0tzz.me"
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik
                port:
                  name: http
